--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <button>Restaurants</button>
       <button>Map</button>
     </section>
+    <div id="content"></div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
