added an empty container

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
       <button>Map</button>
     </section>
 
+    <section id="main-container">
+      <!-- display area is here -->
+    </section>
+
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
