add event listener to attraction button but not working

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     <section id="button-container">
       <button>Weather</button>
-      <button>Attractions</button>
+      <button id="attractionBtn">Attractions</button>
       <button>Restaurants</button>
       <button>Map</button>
     </section>
