restaurants from google map-partial

--- a/index.html
+++ b/index.html
@@ -30,16 +30,17 @@
     </form>
 
     <section id="button-container">
-      <button>Weather</button>
-      <button>Attractions</button>
-      <button>Restaurants</button>
-      <button>Map</button>
+      <button id = "weather">Weather</button>
+      <button id = "attractions">Attractions</button>
+      <button id = "restaurants">Restaurants</button>
+      <button id = "map">Map</button>
     </section>
     <div id="content"></div>
 
     <section id="main-container">
       <!-- display area is here -->
     </section>
+    <p></p>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
