--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </form>
 
     <section id="button-container">
-      <button>Weather</button>
+      <button id="weatherBtn">Weather</button>
       <button id="attractionBtn">Attractions</button>
       <button>Restaurants</button>
       <button>Map</button>
@@ -62,3 +62,4 @@
     <script src="script.js"></script>
   </body>
 </html>
+
