use localStorage to save items

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       <button id="attractionBtn">Attractions</button>
       <button>Restaurants</button>
       <button>Map</button>
+      <button id="favoriteBtn">Favorite</button>
     </section>
     <div id="content"></div>
 
@@ -80,4 +81,3 @@
     <script src="script.js"></script>
   </body>
 </html>
-
