Updated index HTML file with js script code

--- a/yaping_index.html
+++ b/yaping_index.html
@@ -71,7 +71,7 @@
         id="user_input"
         placeholder="Type your dream city"
       /><br />
-      <input type="submit" value="Submit" />
+      <input type="submit" value="Search" />
     </form>
 
     <section id="button-container">
