--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
 
     <link rel="stylesheet" href="style.css" />
-    <h1 id ="header-style"> Exquisite Travel</h1>
+    <h1 id="header-style">Exquisite Travel</h1>
   </head>
   <body>
     <form id="myForm">
@@ -32,24 +32,23 @@
         type="text"
         name=""
         id="user_input"
-        placeholder="  Type your dream city"
+        placeholder=" Where are you looking for?"
       /><br />
-      <input type="submit" value="Submit" id = "submitBtn" />
+      <input type="submit" value="Search" id="submitBtn" />
     </form>
 
-    <section id="button-container" >
-      <button id="weatherBtn"class="btn btn-warning">Weather</button>
-      <button id="attractionBtn"class="btn btn-warning">Attractions</button>
-      <button id="restaurantsBtn"class="btn btn-warning">Restaurants</button>
-      <button id="mapBtn"class="btn btn-warning">Map</button>
-      <button id="favoriteBtn"class="btn btn-warning">Favourite</button>
+    <section id="button-container">
+      <button id="weatherBtn" class="btn btn-warning">Weather</button>
+      <button id="attractionBtn" class="btn btn-warning">Attractions</button>
+      <button id="restaurantsBtn" class="btn btn-warning">Restaurants</button>
+      <button id="mapBtn" class="btn btn-warning">Map</button>
+      <button id="favoriteBtn" class="btn btn-warning">Favourite</button>
     </section>
     <div id="content"></div>
 
     <section id="main-container">
       <!-- display area is here -->
     </section>
-  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -92,6 +91,5 @@
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
-   
   </body>
 </html>
