--- a/index.html
+++ b/index.html
@@ -1,57 +1,33 @@
-<!doctype html>
-<html class="no-js" lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Exquisite Travel</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link rel="manifest" href="site.webmanifest">
-		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
-        <link
-        rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-        crossorigin="anonymous"
-      />
-      <link
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <title>ExquisiteTravel</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+
+    <!-- Bootstrap CSS -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      crossorigin="anonymous"
+    />
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
-     <link rel="stylesheet" href="style.css" />
-
-		<!-- CSS here -->
-            <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-            <link rel="stylesheet" href="assets/css/owl.carousel.min.css">
-            <link rel="stylesheet" href="assets/css/slicknav.css">
-            <link rel="stylesheet" href="assets/css/flaticon.css">
-            <link rel="stylesheet" href="assets/css/animate.min.css">
-            <link rel="stylesheet" href="assets/css/magnific-popup.css">
-            <link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
-            <link rel="stylesheet" href="assets/css/themify-icons.css">
-            <link rel="stylesheet" href="assets/css/slick.css">
-            <link rel="stylesheet" href="assets/css/nice-select.css">
-            <link rel="stylesheet" href="assets/css/style.css">
-   </head>
-
-   <body>
-    <!-- Preloader Start -->
-    <div id="preloader-active">
-        <div class="preloader d-flex align-items-center justify-content-center">
-            <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
-                <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/loder.jpg" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Preloader Start --> 
-    <main>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
-    <h1 id="header-style">Exquisite Travel</h1>
+    <h1 id ="header-style"> Exquisite Travel Inc.</h1>
   </head>
   <body>
     <form id="myForm">
@@ -59,23 +35,24 @@
         type="text"
         name=""
         id="user_input"
-        placeholder=" Where are you looking for?"
+        placeholder="  Type your dream city"
       /><br />
-      <input type="submit" value="Search" id="submitBtn" />
+      <input type="submit" value="Submit" id = "submitBtn" />
     </form>
 
-    <section id="button-container">
-      <button id="weatherBtn" class="btn btn-warning">Weather</button>
-      <button id="attractionBtn" class="btn btn-warning">Attractions</button>
-      <button id="restaurantsBtn" class="btn btn-warning">Restaurants</button>
-      <button id="mapBtn" class="btn btn-warning">Map</button>
-      <button id="favoriteBtn" class="btn btn-warning">Favourite</button>
+    <section id="button-container" >
+      <!-- <button id="weatherBtn"class="btn btn-warning">Weather</button>  -->
+      <button id="attractionBtn"class="btn btn-warning">Attractions</button>
+      <button id="restaurantsBtn"class="btn btn-warning">Restaurants</button>
+      <button id="mapBtn"class="btn btn-warning">Map</button>
+      <button id="favoriteBtn"class="btn btn-warning">Favourite</button>
     </section>
     <div id="content"></div>
 
     <section id="main-container">
       <!-- display area is here -->
     </section>
+  
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -118,5 +95,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="script.js"></script>
+   
   </body>
 </html>
