remove extra lines

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </form>
 
     <section id="button-container">
-      <button id="weatherBtn" class="btn btn-warning">Weather</button>
+      <!-- <button id="weatherBtn" class="btn btn-warning">Weather</button> -->
       <button id="attractionBtn" class="btn btn-warning">Attractions</button>
       <button id="restaurantsBtn" class="btn btn-warning">Restaurants</button>
       <button id="mapBtn" class="btn btn-warning">Map</button>
