--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
       integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Island+Moments&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="style.css" />
-    <h1 id ="header-style"> Exquisite Travel</h1>
+    <h1 id ="header-style"> Exquisite Travel Inc.</h1>
   </head>
   <body>
     <form id="myForm">
@@ -38,7 +41,7 @@
     </form>
 
     <section id="button-container" >
-      <button id="weatherBtn"class="btn btn-warning">Weather</button>
+      <!-- <button id="weatherBtn"class="btn btn-warning">Weather</button> -->
       <button id="attractionBtn"class="btn btn-warning">Attractions</button>
       <button id="restaurantsBtn"class="btn btn-warning">Restaurants</button>
       <button id="mapBtn"class="btn btn-warning">Map</button>
